Feat: Configuração DocklerFile

--- a/backEnd/Dockerfile
+++ b/backEnd/Dockerfile
@@ -1,12 +1,28 @@
+FROM node:20-alpine AS builder
+
+WORKDIR /app
+
+
+COPY package.json package-lock.json ./
+
+RUN npm install
+
+
+COPY . .
+
 FROM node:20-alpine
 
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm install
 
-COPY . .
+COPY --from=builder /app/node_modules ./node_modules
+
+COPY --from=builder /app/src ./src
+COPY --from=builder /app/server.js ./server.js
+COPY --from=builder /app/src/app.js ./src/app.js  
+#ATENCAO ACIMA
+
 
 EXPOSE 3000
 
-CMD ["npm", "run", "dev"]
+CMD ["node", "server.js"]
